--- a/Dockerfile.ORI.BKP
+++ b/Dockerfile.ORI.BKP
@@ -19,9 +19,7 @@ ARG CYCLONEDX_NPM_VERSION=latest
 RUN npm install -g @cyclonedx/cyclonedx-npm@$CYCLONEDX_NPM_VERSION
 RUN npm run sbom
 
-# Change to a distro-based image (debian) with bash
-FROM node:22-bullseye-slim
-
+FROM gcr.io/distroless/nodejs22-debian12
 ARG BUILD_DATE
 ARG VCS_REF
 LABEL maintainer="Bjoern Kimminich <bjoern.kimminich@owasp.org>" \
@@ -36,11 +34,8 @@ LABEL maintainer="Bjoern Kimminich <bjoern.kimminich@owasp.org>" \
     org.opencontainers.image.source="https://github.com/juice-shop/juice-shop" \
     org.opencontainers.image.revision=$VCS_REF \
     org.opencontainers.image.created=$BUILD_DATE
-
 WORKDIR /juice-shop
 COPY --from=installer --chown=65532:0 /juice-shop .
-# Ensure bash is present (should be in official debian/node image, but install if needed)
-RUN apt-get update && apt-get install -y bash && rm -rf /var/lib/apt/lists/*
 USER 65532
 EXPOSE 3000
 CMD ["/juice-shop/build/app.js"]
